test version done

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,21 @@
-api_key = 'api_key'
+api_key = ''
+api_key2 = ''
+
+SECRET_KEY = ''
+
+
+
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_DB=zzap_db
+POSTGRES_PASSWORD = ''
+
+MAIN_URL = https://api.zzap.pro/webservice/datasharing.asmx
+GET_SUGGEST = GetSearchSuggestV3
+GET_BRANDS = GetBrandsV2
+GET_RESULTS = GetSearchResultV3
+
+DEBUG=True
+
+DJANGO_SETTINGS_MODULE=zzap_admin.settings
